# sufficientMRF

./: LICENSE.md  config.toml  pyproject.toml
examples/: example2.ipynb  isingSDR.ipynb  sim_data.txt
src/: ising.py
src/ising_covariates/: __init__.py
src/sufficientMRF/: __init__.py  base.py  estimator.py  ising.py  nonparametric.py  parametric.py
