[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ising-covariates"
version = "0.1.0"
authors = [
  { name="Ignacio Girela", email="ignacio.girela@unc.edu.ar" },
]
description = "Estimate a sparse Ising model that can be specified with covariates."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Statistics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
]

[project.urls]
"Homepage" = "https://github.com/girelaignacio/ising-covariates"