[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sufficientMRF"
version = "0.1.0"
authors = [
  { name="Ignacio Girela", email="ignacio.girela@unc.edu.ar" },
]
description = "Estimate conditional discrete Markov Random Fields that can be specified as a sufficient dimension reduction of a binary variables of interest"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Statistics",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
]

[project.urls]
"Homepage" = "https://github.com/girelaignacio/sufficientMRF"